# tuxedo-rs

./: .release-please-manifest.json  Cargo.toml  flake.nix  release-please-config.json
.github/workflows/: release-please.yml
nix/: module.nix  overlay.nix
tailor_api/: CHANGELOG.md  Cargo.toml
tailor_cli/: CHANGELOG.md  Cargo.toml
tailor_client/: Cargo.toml
tailor_hwcaps/: CHANGELOG.md  Cargo.toml
tailord/: CHANGELOG.md  Cargo.toml
tuxedo_ioctl/: CHANGELOG.md  Cargo.toml
tuxedo_sysfs/: CHANGELOG.md  Cargo.toml
